--- a/main.html
+++ b/main.html
@@ -4,14 +4,16 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<h1>Hello World</h1>
+	<h2>Introducing the Accio Ipsum</h2>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size</p>
     <script type="text/javascript" src="./script.js">
-		<h1>Hello World</h1>
-		<h2>Introducing the Accio Ipsum</h2>
-		<p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
+		
+		
 		
 </script>
 
